Fixed bug causing crash when creating 7 partitions for 450M dataset

--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -547,7 +547,7 @@ help:
 	@echo "  Generate CPP documentation using doxygen. The default html output directory is ./build/cppdocs"
 	@echo ""
 	@echo "  make run-create-partitions [graph=/path/to/graph.mtx]"
-	@echo "  Create partion on a single node"
+	@echo "  Create partitions on a single node"
 	@echo ""
 	@echo "  make run-load-compute [graph=/path/to/graph.mtx]"
 	@echo "  Load partition and compute Louvain modularity on a single node"
@@ -561,6 +561,9 @@ help:
 	@echo ""
 	@echo "  ssh to worker2"
 	@echo "  make run-load-compute-worker2"
+	@echo ""
+	@echo "  debug-cppdemo"
+	@echo "  Debug cppdemo"
 	@echo ""
 	@echo "-------- Options --------"
 	@echo "DEBUG: 1: build application in debug mode. 0: build application in release mode."
