--- a/plugin/tigergraph/comdetect/examples/comdetect/Makefile
+++ b/plugin/tigergraph/comdetect/examples/comdetect/Makefile
@@ -16,7 +16,6 @@
 dataSource=$(CURDIR)/as-skitter/as-Skitter-wt-r100.mtx
 graphName=social_$(USER)
 
-numDevices=1
 numNodes=1
 numPartitionsNode=9
 
@@ -74,7 +73,7 @@ run: .install-udf-done
 	@echo "-------------------------------------------------------"
 	cd ../../ && make DEBUG=$(DEBUG) stage && ./staging/examples/comdetect/bin/run.sh -v \
 	    -g $(graphName) -s $(dataSource) \
-		-m $(numNodes) -d $(numDevices)  -n $(numPartitionsNode) \
+		-m $(numNodes) -n $(numPartitionsNode) \
 		-c $(compileMode) -x $(partitionMode) -r $(runMode) 
 
 .PHONY: run-cluster
@@ -99,17 +98,19 @@ help:
 	@echo "partition: Run partition.sh to partition the graph in TigerGraph memory"
 	@echo ""
 	@echo "Optional make parameters"
-	@echo "dataSource       : A .mtx file containing input graph. default=./as-Skitter/as-Skitter-wt-e110k.mtx"
-	@echo "numDevices       : number of FPGAs needed (default=1)"
+	@echo "dataSource       : A .mtx file containing input graph. default=./as-Skitter/as-Skitter-wt-r100.mtx"
 	@echo "graphName        : graph name (default=social_<username>"
 	@echo "numNodes         : Number of nodes in Tigergraph cluster"
-	@echo "numPartitionsNode: Number of Alveo partitions"
+	@echo "numPartitionsNode: Number of Alveo partitions per node"
 	@echo ""
 	@echo "compileMode      : 0: recreate database and compile all (default)"
 	@echo "                   1: only compile query gsql"
 	@echo "                   2: skip database creation and gsql compilation"
 	@echo "partitionMode    : 0: Use existing partitions from disks; 1: Generate partitions from TigerGraph memory"
-	@echo "runMode          : 0: Run only on CPU; 1: Run only on Alveo (default); 2: Run on both CPU and Alveo"
+	@echo "runMode          : 0: Run only on CPU"
+	@echo "                   1: Run only on Alveo (default)"
+	@echo "                   2: Run on both CPU and Alveo"
+	@echo "                   3: Skip both CPU and Alveo run (i.e. only run partition)"
 	@echo ""
 	@echo "sshKey           : SSH key for user tigergraph"	
 	@echo ""
@@ -117,4 +118,5 @@ help:
 	@echo "make dataSource=/proj/gdba/datasets/louvain-graphs/as-Skitter-wt.mtx"
 
 clean:
+	cd ../../../../../louvainmod && make clean
 	rm -f .install-plugin-done .install-udf-done .install-query-done
