--- a/plugin/tigergraph/comdetect/package/Makefile
+++ b/plugin/tigergraph/comdetect/package/Makefile
@@ -24,7 +24,7 @@ else ifeq ($(OSDIST),CentOS)
     DIST_TARGET = rpm
 endif
 
-package:$(PKGDIR)
+package: $(PKGDIR)
 	cd $(PKGDIR); \
 	cmake -DCMAKE_BUILD_TYPE=Release -DPROD_VERSION=${PROD_VERSION} -DCMAKE_INSTALL_PREFIX=/opt/xilinx/apps/graphanalytics/integration/${PLUGIN}  ..;\
 	cmake --build .;\
@@ -35,4 +35,7 @@ package:$(PKGDIR)
 
 $(PKGDIR):
 	mkdir $(PKGDIR); 
+
+clean:
+	rm -rf _CPack_Packages
 
