Added U55 XCLBIN loading to cosinesim

--- a/L2/louvainmod_renum_kernel/Makefile
+++ b/L2/louvainmod_renum_kernel/Makefile
@@ -40,6 +40,7 @@ help::
 	$(ECHO) "  make build TARGET=<sw_emu/hw_emu/hw> DEVICE=<FPGA platform> HOST_ARCH=<aarch32/aarch64/x86>"
 	$(ECHO) "      Command to build xclbin application."
 	$(ECHO) "      By default, HOST_ARCH=x86. HOST_ARCH is required for SoC shells"
+	$(ECHO) "      Supported DEVICE: xilinx_u50_gen3x16_xdma_201920_3 xilinx_u55c_gen3x16_xdma_1_202110_1"
 	$(ECHO) ""
 	$(ECHO) "  make host HOST_ARCH=<aarch32/aarch64/x86>"
 	$(ECHO) "      Command to build host application."
