WIP: added partitioning from TG using .mtx IDs
- also includes ability to choose flat or server partition names

--- a/plugin/tigergraph/comdetect/examples/comdetect/Makefile
+++ b/plugin/tigergraph/comdetect/examples/comdetect/Makefile
@@ -100,6 +100,7 @@ help:
 	@echo "partitionMode     : 0: Use existing partitions from disks; "
 	@echo "                    1: Generate partitions from TigerGraph memory"
 	@echo "                    2: Generate partitions from .mtx file (default)"
+	@echo "                    3: Generate partitions from TigerGraph using whole-graph technique"
 	@echo "runMode           : 0: Run only on CPU"
 	@echo "                    1: Run only on Alveo (default)"
 	@echo "                    2: Run on both CPU and Alveo"
