--- a/cosinesim/Makefile
+++ b/cosinesim/Makefile
@@ -383,15 +383,17 @@ endif
 
 
 L2_TOP_DIR = $(GRAPH_ANALYTICS_DIR)/L2/dense_similarity_multi_kernel
+L2_TOP_DIR_4PU = $(GRAPH_ANALYTICS_DIR)/L2/dense_similarity_multi_kernel_4pu
 L2_XDEVICE_U50 = xilinx_u50_gen3x16_xdma_201920_3
 L2_XDEVICE_U55C = xilinx_u55c_gen3x16_xdma_1_202110_1
 L2_BUILD_DIR_U50 = $(L2_TOP_DIR)/build_dir.hw.$(L2_XDEVICE_U50)
-L2_BUILD_DIR_U55C = $(L2_TOP_DIR)/build_dir.hw.$(L2_XDEVICE_U55C)
+L2_BUILD_DIR_U55C = $(L2_TOP_DIR_4PU)/build_dir.hw.$(L2_XDEVICE_U55C)
 
 DEVICE ?= $(L2_XDEVICE)
 XCLBIN_NAME = denseSimilarityKernel.xclbin
+XCLBIN_NAME_4PU = denseSimilarityKernel4PUWithAlias.xclbin
 XCLBIN_FILE_U50 = $(L2_BUILD_DIR_U50)/$(XCLBIN_NAME)
-XCLBIN_FILE_U55C = $(L2_BUILD_DIR_U55C)/$(XCLBIN_NAME)
+XCLBIN_FILE_U55C = $(L2_BUILD_DIR_U55C)/$(XCLBIN_NAME_4PU)
 XCLBIN_INSTALLED_U50 = /opt/xilinx/apps/graphanalytics/cosinesim/xclbin/cosinesim_32bit_xilinx_u50_gen3x16_xdma_201920_3.xclbin
 XCLBIN_INSTALLED_U55C = /opt/xilinx/apps/graphanalytics/cosinesim/xclbin/cosinesim_32bit_xilinx_u55c_gen3x16_xdma_base_1.xclbin
 .PHONY: xclbin
