--- a/L2/louvainmod_pruning_kernel/Makefile
+++ b/L2/louvainmod_pruning_kernel/Makefile
@@ -114,6 +114,7 @@ CXXFLAGS += -I$(XFLIB_DIR)/ext/xcl2
 CXXFLAGS += -I$(XFLIB_DIR)/L2/include
 #CXXFLAGS += -I$(XFLIB_DIR)/../utils/L1/include
 CXXFLAGS += -I$(XFLIB_DIR)/ext/xcl2
+CXXFLAGS += -I$(XFLIB_DIR)/L3/include
 
 ifeq ($(TARGET),sw_emu)
 CXXFLAGS += -D SW_EMU_TEST
@@ -126,18 +127,14 @@ endif
 # ######################### Host compiler global settings ############################
 CXXFLAGS += -I$(XILINX_XRT)/include -I$(XILINX_VIVADO)/include -std=c++11 -Wall -Wno-unknown-pragmas
 LDFLAGS += -L$(XILINX_XRT)/lib -lOpenCL -lpthread -lrt -Wno-unused-label -Wno-unused-variable -Wno-write-strings -Wno-narrowing -DVERBOSE -Wno-format
-CXXFLAGS += -fmessage-length=0 -O3 -DPRAGMA -Ofast -fopenmp -fPIC -DMULTITHREAD
-CXXFLAGS += -I$(CUR_DIR)/src/ 
-
-#DEBUG = 1
-ifndef DEBUG
+CXXFLAGS += -fmessage-length=0 -DPRAGMA -fopenmp -fPIC -DMULTITHREAD
+#CXXFLAGS += -g
 CXXFLAGS += -O3
-else
-CXXFLAGS += -g
-endif
+CXXFLAGS += -I$(CUR_DIR)/src/ 
+CXXFLAGS += -D DEBUGPAR
 
 ifeq ($(HOST_ARCH), x86)
-LDFLAGS += -L$(XILINX_VIVADO)/lnx64/tools/fpo_v7_0 -Wl,--as-needed -lgmp -lmpfr -lIp_floating_point_v7_0_bitacc_cmodel
+#LDFLAGS += -L$(XILINX_VIVADO)/lnx64/tools/fpo_v7_0 -Wl,--as-needed -lgmp -lmpfr -lIp_floating_point_v7_0_bitacc_cmodel
 endif
 ifneq (,$(shell echo $(XPLATFORM) | awk '/u50/'))
 CXXFLAGS += -D USE_HBM
@@ -150,11 +147,11 @@ endif
 
 EXE_NAME := host.exe
 EXE_FILE := $(BUILD_DIR)/$(EXE_NAME)
-HOST_ARGS :=  -x $(BUILD_DIR)/kernel_louvain.xclbin -f 3 -c -o -m 10 -prun $(XFLIB_DIR)/L2/louvainmod_pruning_kernel/data/example-wt.txt
+HOST_ARGS :=  -x $(BUILD_DIR)/kernel_louvain.xclbin -f 3 -c -o -m 10000 -prun $(XFLIB_DIR)/L2/louvainmod_pruning_kernel/data/example-wt.txt
 
 # ##################### Kernel compiler global settings ##########################
 VPP_FLAGS += -t $(TARGET) --platform $(XPLATFORM) --save-temps --optimize 2
-VPP_FLAGS += --jobs 8 --debug
+VPP_FLAGS += --jobs 8
 VPP_FLAGS += --config $(CUR_DIR)/conn_u50_u55c_u280.ini
 
 VPP_FLAGS += -I$(XFLIB_DIR)/L2/include
